--- a/main.ipynb
+++ b/main.ipynb
@@ -4,206 +4,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Library for sequential neural networks"
+    "# Library for neural networks\n",
+    "\n",
+    "Sequential neural networks for supervised learning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 616,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
-    "import random as rnd\n",
-    "import numpy as np\n",
-    "from enum import Enum"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Classes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Neuron"
+    "from classes import Neuron, Layer, Network_Model\n",
+    "import helpers as hlp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 617,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Neuron:\n",
-    "    def __init__(self, id):\n",
-    "        self.id = id\n",
-    "        self.output = 0\n",
-    "        self.bias = 0 if self.id[0] == 0 else round((rnd.random() - 0.5) * 5, 2) # if layer id is 0, it is an input layer\n",
-    "    \n",
-    "    def propagate(self, prev_layer_neurons, current_layer_weights, current_layer_activation_function):\n",
-    "        net_input = 0\n",
-    "\n",
-    "        for n in prev_layer_neurons:\n",
-    "            net_input += n.output * current_layer_weights[n.id[1]][self.id[1]]\n",
-    "            \n",
-    "        net_input += self.bias\n",
-    "        self.output = round(self.activate(net_input, current_layer_activation_function), 2) # ToDo: How does the previous activation play a role?\n",
-    "\n",
-    "    def activate(self, input, activation):\n",
-    "        match activation:\n",
-    "            case 'identity':\n",
-    "                return input\n",
-    "            case 'relu':\n",
-    "                return max(0, input)\n",
-    "            case 'binary_step':\n",
-    "                return 0 if input < 0 else 1\n",
-    "            case 'sigmoid':\n",
-    "                return 1 / (1 + math.exp(-input))\n",
-    "            case 'tanh':\n",
-    "                return math.tanh(input)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Layer"
+    "mdl = Network_Model()\n",
+    "mdl.add_layer(3)\n",
+    "mdl.add_layer(5, activation='relu')\n",
+    "mdl.add_layer(5, activation='relu')\n",
+    "mdl.add_layer(3, activation='sigmoid')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 618,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Layer:\n",
-    "    def __init__(self, id, num_of_neurons, activation = 'identity', prev_layer = None):\n",
-    "        self.id = id\n",
-    "        self.num_of_neurons = num_of_neurons\n",
-    "        self.activation = activation if activation in ['identity', 'relu', 'binary_step', 'sigmoid', 'tanh'] else 'identity'\n",
-    "\n",
-    "        self.neurons = []\n",
-    "\n",
-    "        for i in range(self.num_of_neurons):\n",
-    "            self.neurons.append(Neuron((self.id, i), ))\n",
-    "        \n",
-    "        if self.id > 0:\n",
-    "            self.weights = np.zeros((prev_layer.num_of_neurons, self.num_of_neurons))\n",
-    "            \n",
-    "            for i in range(len(self.weights)):\n",
-    "                for j in range(len(self.weights[0])):\n",
-    "                    self.weights[i][j] = round(rnd.random(), 2)\n",
-    "\n",
-    "    def add_neuron(self):\n",
-    "        self.neurons.append(Neuron((self.id, len(self.neurons))))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Network"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 619,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Network_Model:\n",
-    "    def __init__(self, id):\n",
-    "        self.id = id\n",
-    "        self.layers = []\n",
-    "\n",
-    "    def add_layer(self, num_of_neurons, activation = 'identity'):\n",
-    "        if num_of_neurons < 1:\n",
-    "            print('Number of neurons has to be larger or equal to 0!')\n",
-    "            return\n",
-    "        \n",
-    "        if activation not in ['identity', 'relu', 'binary_step', 'sigmoid', 'tanh']:\n",
-    "            print(f'Activation function \"{activation}\" does not exist!')\n",
-    "            return\n",
-    "\n",
-    "        if len(self.layers) > 0:\n",
-    "            self.layers.append(Layer(len(self.layers), num_of_neurons, activation, self.layers[-1]))\n",
-    "        else:\n",
-    "            self.layers.append(Layer(len(self.layers), num_of_neurons, activation))\n",
-    "\n",
-    "    def plot_network(self):\n",
-    "        for l in self.layers:\n",
-    "            s = '|'\n",
-    "            for n in l.neurons:\n",
-    "                s += ' ' + str(n.id) + ', ' + str(n.output) + ' |'\n",
-    "            print(s)\n",
-    "    \n",
-    "    def learn(self):\n",
-    "        pass\n",
-    "\n",
-    "    def predict(self, input):\n",
-    "        # write input to first layer\n",
-    "        if len(input) != len(self.layers[0].neurons):\n",
-    "            print('Not enough input values!')\n",
-    "            return\n",
-    "\n",
-    "        for i, n in enumerate(self.layers[0].neurons):\n",
-    "            n.output = input[i]\n",
-    "        \n",
-    "        # propagate\n",
-    "        for l in self.layers:\n",
-    "            if l.id == 0: continue # prevent input neurons from propagating\n",
-    "\n",
-    "            for n in l.neurons:\n",
-    "                n.propagate(self.layers[l.id - 1].neurons, l.weights, l.activation)\n",
-    "    \n",
-    "        for n in self.layers[-1].neurons:\n",
-    "            print(n.output)\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def normalize(input, max_value):\n",
-    "        normalized = []\n",
-    "        \n",
-    "        for i in input:\n",
-    "            normalized.append(round(i / max_value, 2))\n",
-    "        return normalized"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Instanciating a network"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 620,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mdl = Network_Model(0)\n",
-    "mdl.add_layer(5)\n",
-    "mdl.add_layer(10, activation='relu')\n",
-    "mdl.add_layer(1, activation='sigmoid')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 621,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| (0, 0), 0 | (0, 1), 0 | (0, 2), 0 | (0, 3), 0 | (0, 4), 0 |\n",
-      "| (1, 0), 0 | (1, 1), 0 | (1, 2), 0 | (1, 3), 0 | (1, 4), 0 | (1, 5), 0 | (1, 6), 0 | (1, 7), 0 | (1, 8), 0 | (1, 9), 0 |\n",
-      "| (2, 0), 0 |\n"
+      "| (0, 0), o = 0, b = 0 | (0, 1), o = 0, b = 0 | (0, 2), o = 0, b = 0 |\n",
+      "| (1, 0), o = 0, b = 0.42 | (1, 1), o = 0, b = 1.0 | (1, 2), o = 0, b = 0.61 | (1, 3), o = 0, b = 0.05 | (1, 4), o = 0, b = 0.02 |\n",
+      "| (2, 0), o = 0, b = 0.91 | (2, 1), o = 0, b = 0.77 | (2, 2), o = 0, b = 0.68 | (2, 3), o = 0, b = 0.31 | (2, 4), o = 0, b = 0.78 |\n",
+      "| (3, 0), o = 0, b = 0.15 | (3, 1), o = 0, b = 0.98 | (3, 2), o = 0, b = 0.31 |\n"
      ]
     }
    ],
@@ -213,39 +54,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 622,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.39, 0.  , 0.6 , 0.75, 0.01],\n",
+       "       [0.42, 0.2 , 0.97, 0.72, 0.67],\n",
+       "       [0.37, 0.63, 0.15, 0.12, 0.01]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mdl.layers[1].weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.89\n"
+      "0.75\n",
+      "0.77\n",
+      "0.63\n"
      ]
     }
    ],
    "source": [
-    "input = [1, 0, 0, 0, 0]\n",
+    "input = [1, 0.45, 0.05]\n",
     "mdl.predict(input)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 623,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| (0, 0), 1 | (0, 1), 0 | (0, 2), 0 | (0, 3), 0 | (0, 4), 0 |\n",
-      "| (1, 0), 1.54 | (1, 1), 0.2 | (1, 2), 0 | (1, 3), 1.1 | (1, 4), 0 | (1, 5), 1.85 | (1, 6), 0 | (1, 7), 0 | (1, 8), 0 | (1, 9), 0 |\n",
-      "| (2, 0), 0.89 |\n"
+      "| (0, 0), o = 1, b = 0 | (0, 1), o = 0.45, b = 0 | (0, 2), o = 0.05, b = 0 |\n",
+      "| (1, 0), o = 0.11, b = 0.91 | (1, 1), o = 0.81, b = 0.04 | (1, 2), o = 0.14, b = 0.76 | (1, 3), o = 0.5, b = 0.9 | (1, 4), o = 0.86, b = 0.47 |\n",
+      "| (2, 0), o = 0.25, b = 0.47 | (2, 1), o = 0.69, b = 0.5 | (2, 2), o = 0.17, b = 0.64 | (2, 3), o = 1.07, b = 0.81 | (2, 4), o = 1.22, b = 0.62 |\n",
+      "| (3, 0), o = 0.75, b = 0.57 | (3, 1), o = 0.77, b = 0.66 | (3, 2), o = 0.63, b = 0.68 |\n"
      ]
     }
    ],
    "source": [
     "mdl.plot_network()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[255, 255, 255, 1], [255, 255, 255, 1], [255, 255, 255, 1], [255, 255, 255, 1], [255, 255, 255, 1], [255, 255, 255, 1], [255, 255, 255, 1], [0, 0, 0, 0]]\n",
+      "[[255, 255, 255, 1], [255, 255, 255, 1], [127, 127, 127, 0.5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [\n",
+    "    [255, 255, 255, 1],\n",
+    "    [255, 255, 255, 1],\n",
+    "    [255, 255, 255, 1],\n",
+    "    [255, 255, 255, 1],\n",
+    "    [255, 255, 255, 1],\n",
+    "    [255, 255, 255, 1],\n",
+    "    [255, 255, 255, 1],\n",
+    "    [255, 255, 255, 1],\n",
+    "    [255, 255, 255, 1],\n",
+    "    [0, 0, 0, 0],\n",
+    "    [127, 127, 127, 0.5]\n",
+    "]\n",
+    "\n",
+    "test_data, val_data = hlp.split_training_data(data, 0.25)\n",
+    "print(test_data)\n",
+    "print(val_data)"
    ]
   }
  ],
