--- a/rgb.ipynb
+++ b/rgb.ipynb
@@ -201,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "history = mdl.train(train_df_x_norm, train_df_y, epochs=100, debug=False, learning_rate=0.5)"
+    "history = mdl.train(train_df_x_norm, train_df_y, epochs=200, debug=True, shuffle=True, default_learning_rate=0.5, adaptive_learning_rate = True)"
    ]
   },
   {
@@ -219,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hlp.plot_learning_curve(history, 'epoch', 'cumulative error', 'learning curve')"
+    "hlp.plot_learning_curve(history, 'Epochs', 'Average Error', 'Learning Curve')"
    ]
   },
   {
@@ -237,17 +237,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rgb = [174, 90, 137] # https://www.w3schools.com/colors/colors_rgb.asp\n",
+    "rgb = [0, 10, 0] # https://www.w3schools.com/colors/colors_rgb.asp\n",
     "input = chlp.rgb_to_norm(rgb)\n",
     "pred = mdl.predict(input) # Possible Color Predictions: Beige, Yellow, Orange, Red, Purple, Blue, Green, Grey, Brown, White, Black\n",
     "print(y_columns[pred.index(max(pred))])\n",
     "chlp.plot_color(input)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
