--- a/rgb.ipynb
+++ b/rgb.ipynb
@@ -123,10 +123,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mdl = Network_Model()\n",
-    "mdl.add_layer(3)\n",
-    "mdl.add_layer(16, activation_function='sigmoid')\n",
-    "mdl.add_layer(11, activation_function='sigmoid')"
+    "mdl_rgb = Network_Model()\n",
+    "mdl_rgb.add_layer(3)\n",
+    "mdl_rgb.add_layer(16, activation_function='sigmoid')\n",
+    "mdl_rgb.add_layer(11, activation_function='sigmoid')"
    ]
   },
   {
@@ -142,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mdl.plot_network()"
+    "mdl_rgb.plot_network()"
    ]
   },
   {
@@ -158,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mdl.layers[1].get_weights()"
+    "mdl_rgb.layers[1].get_weights()"
    ]
   },
   {
@@ -176,7 +176,7 @@
    "source": [
     "rgb = [255, 0, 0]\n",
     "input = chlp.rgb_to_norm(rgb)\n",
-    "pred = mdl.predict(input)\n",
+    "pred = mdl_rgb.predict(input)\n",
     "print(y_columns[pred.index(max(pred))])\n",
     "chlp.plot_color(input)"
    ]
@@ -201,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "history = mdl.train(train_df_x_norm, train_df_y, epochs=200, debug=True, shuffle=True, default_learning_rate=0.5, adaptive_learning_rate = True)"
+    "history = mdl_rgb.train(train_df_x_norm, train_df_y, epochs=200, debug=True, shuffle=True, default_learning_rate=0.5, adaptive_learning_rate = True, learning_rate_pfac=1.3, learning_rate_nfac=0.7)"
    ]
   },
   {
@@ -237,9 +237,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rgb = [250, 100, 0] # https://www.w3schools.com/colors/colors_rgb.asp\n",
+    "rgb = [170, 0, 100] # https://www.w3schools.com/colors/colors_rgb.asp\n",
     "input = chlp.rgb_to_norm(rgb)\n",
-    "pred = mdl.predict(input) # Possible Color Predictions: Beige, Yellow, Orange, Red, Purple, Blue, Green, Grey, Brown, White, Black\n",
+    "pred = mdl_rgb.predict(input) # Possible Color Predictions: Beige, Yellow, Orange, Red, Purple, Blue, Green, Grey, Brown, White, Black\n",
     "print(y_columns[pred.index(max(pred))])\n",
     "chlp.plot_color(input)"
    ]
