--- a/circle.ipynb
+++ b/circle.ipynb
@@ -25,8 +25,8 @@
     "\n",
     "size = 30\n",
     "\n",
-    "for i in range(int(-size/2), int(size/2)):\n",
-    "    for j in range(int(-size/2), int(size/2)):\n",
+    "for i in range(int(-size/2)-10, int(size/2)):\n",
+    "    for j in range(int(-size/2)-10, int(size/2)):\n",
     "        circle.append([i, j, 1 if (math.sqrt(i*i + j*j) <= (size/3)) else 0])\n",
     "\n",
     "df = pd.DataFrame(circle, columns=['x', 'y', 'inside'])\n",
@@ -64,7 +64,7 @@
    "source": [
     "mdl = Network_Model()\n",
     "mdl.add_layer(2)\n",
-    "mdl.add_layer(16, 'tanh')\n",
+    "mdl.add_layer(8, 'sigmoid')\n",
     "mdl.add_layer(1, 'sigmoid')"
    ]
   },
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "history = mdl.train(x_n, y, epochs=100, debug=True, shuffle=True, learning_rate_n=1, learning_rate_p=1)\n",
+    "history = mdl.train(x_n, y, epochs=100, debug=True, shuffle=True, learning_rate_n=0.1, learning_rate_p=1, momentum_factor=0.7)\n",
     "hlp.plot_learning_curve(history)"
    ]
   },
@@ -86,8 +86,8 @@
    "source": [
     "pred = []\n",
     "\n",
-    "for i in range(int(-size/2), int(size/2)):\n",
-    "    for j in range(int(-size/2), int(size/2)):\n",
+    "for i in range(int(-size/2)-10, int(size/2)):\n",
+    "    for j in range(int(-size/2)-10, int(size/2)):\n",
     "        input = [i/(size/2), j/(size/2)]\n",
     "        pred.append([i, j, mdl.predict(input)[0]])"
    ]
