--- a/halfmoon.ipynb
+++ b/halfmoon.ipynb
@@ -22,8 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hm = hmhlp.halfMoon(500, 10, -5, 6)\n",
-    "hm = hmhlp.halfMoon(200, 10, 1, 6)"
+    "hm = hmhlp.halfMoon(500, 10, -5, 6)\n",
+    "# hm = hmhlp.halfMoon(200, 10, 1, 6)"
    ]
   },
   {
@@ -84,7 +84,8 @@
    "source": [
     "mdl_hm = Network_Model()\n",
     "mdl_hm.add_layer(2)\n",
-    "mdl_hm.add_layer(16, 'tanh')\n",
+    "mdl_hm.add_layer(16, 'sigmoid')\n",
+    "mdl_hm.add_layer(4, 'sigmoid')\n",
     "mdl_hm.add_layer(1, 'sigmoid')"
    ]
   },
@@ -97,7 +98,8 @@
     "history = mdl_hm.train(\n",
     "    df_train_x_norm, df_train_y,\n",
     "    epochs=50, debug=False, shuffle=True,\n",
-    "    learning_rate_p = 1.2, learning_rate_n = 0.8)\n",
+    "    learning_rate_p = 1, learning_rate_n = 1,\n",
+    "    momentum_factor=0.7)\n",
     "    \n",
     "hlp.plot_learning_curve(history)"
    ]
