--- a/rgb.ipynb
+++ b/rgb.ipynb
@@ -201,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "history = mdl_rgb.train(train_df_x_norm, train_df_y, epochs=200, debug=True, shuffle=True, default_learning_rate=0.5, adaptive_learning_rate = True, learning_rate_pfac=1.3, learning_rate_nfac=0.7)"
+    "history = mdl_rgb.train(train_df_x_norm, train_df_y, epochs=200, debug=True, shuffle=True, learning_rate_p=1.3, learning_rate_n=0.7, momentum_factor=0.6)"
    ]
   },
   {
@@ -237,7 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rgb = [170, 0, 100] # https://www.w3schools.com/colors/colors_rgb.asp\n",
+    "rgb = [220, 255, 50] # https://www.w3schools.com/colors/colors_rgb.asp\n",
     "input = chlp.rgb_to_norm(rgb)\n",
     "pred = mdl_rgb.predict(input) # Possible Color Predictions: Beige, Yellow, Orange, Red, Purple, Blue, Green, Grey, Brown, White, Black\n",
     "print(y_columns[pred.index(max(pred))])\n",
