network plot using plotly and networkx

--- a/halfmoon.ipynb
+++ b/halfmoon.ipynb
@@ -95,11 +95,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "mdl_hm.plot_network_pretty()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "history = mdl_hm.train(\n",
-    "    df_train_x_norm, df_train_y,\n",
-    "    epochs=50, debug=False, shuffle=True,\n",
-    "    learning_rate_p = 1, learning_rate_n = 1,\n",
-    "    momentum_factor=0.7)\n",
+    "    df_train_x_norm,\n",
+    "    df_train_y,\n",
+    "    epochs=50,\n",
+    "    debug=True,\n",
+    "    shuffle=True,\n",
+    "    learning_rate_p = 1,\n",
+    "    learning_rate_n = 1,\n",
+    "    momentum_factor=0.7\n",
+    ")\n",
     "    \n",
     "hlp.plot_learning_curve(history)"
    ]
@@ -139,8 +153,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# np_array = np.array(list_pts)\n",
-    "np_array = np.array(arr)\n",
+    "np_array = np.array(list_pts)\n",
+    "# np_array = np.array(arr)\n",
     "transpose = np_array.T\n",
     "transpose_list = transpose.tolist()"
    ]
