--- a/rgb.ipynb
+++ b/rgb.ipynb
@@ -142,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mdl_rgb.plot_network()"
+    "mdl_rgb.plot_network_pretty()"
    ]
   },
   {
