flat spot elimination

--- a/halfmoon.ipynb
+++ b/halfmoon.ipynb
@@ -11,9 +11,9 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
-    "from library.classes import Neuron, Layer, Network_Model\n",
-    "from library import helpers as hlp\n",
-    "import halfmoon_helpers as hmhlp"
+    "from model.classes import Neuron, Layer, Network_Model\n",
+    "from model import helpers as hlp\n",
+    "from halfmoon import halfmoon_helpers as hmhlp"
    ]
   },
   {
@@ -95,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mdl_hm.plot_network_pretty()"
+    "mdl_hm.plot_network()"
    ]
   },
   {
