--- a/rgb.ipynb
+++ b/rgb.ipynb
@@ -17,9 +17,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from library.classes import Neuron, Layer, Network_Model\n",
-    "from library import helpers as hlp\n",
-    "import rgb_helpers as chlp\n",
+    "from model.classes import Neuron, Layer, Network_Model\n",
+    "from model import helpers as hlp\n",
+    "import rgb.rgb_helpers as chlp\n",
     "import pandas as pd"
    ]
   },
@@ -142,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mdl_rgb.plot_network_pretty()"
+    "mdl_rgb.plot_network()"
    ]
   },
   {
@@ -237,7 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rgb = [220, 255, 50] # https://www.w3schools.com/colors/colors_rgb.asp\n",
+    "rgb = [140, 50, 180] # https://www.w3schools.com/colors/colors_rgb.asp\n",
     "input = chlp.rgb_to_norm(rgb)\n",
     "pred = mdl_rgb.predict(input) # Possible Color Predictions: Beige, Yellow, Orange, Red, Purple, Blue, Green, Grey, Brown, White, Black\n",
     "print(y_columns[pred.index(max(pred))])\n",
