increased modularity for radial basis networks

--- a/8_3_8_encoding.ipynb
+++ b/8_3_8_encoding.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from model.classes import Neuron, Layer, Network_Model\n",
+    "from model.classes import Neuron, Layer, Feed_Forward\n",
     "from model import helpers as hlp\n",
     "import rgb.rgb_helpers as chlp\n",
     "import pandas as pd"
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mdl_8_3_8 = Network_Model()\n",
+    "mdl_8_3_8 = Feed_Forward()\n",
     "mdl_8_3_8.add_layer(8)\n",
     "mdl_8_3_8.add_layer(3, activation_function='sigmoid')\n",
     "mdl_8_3_8.add_layer(8, activation_function='sigmoid')\n",
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_num = 7\n",
+    "input_num = 3\n",
     "input_vec = []\n",
     "\n",
     "match input_num:\n",
