--- a/halfmoon.ipynb
+++ b/halfmoon.ipynb
@@ -11,7 +11,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
-    "from model.classes import Neuron, Layer, Network_Model\n",
+    "from model.classes import Neuron, Layer, Feed_Forward\n",
     "from model import helpers as hlp\n",
     "from halfmoon import halfmoon_helpers as hmhlp"
    ]
@@ -82,11 +82,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mdl_hm = Network_Model()\n",
+    "mdl_hm = Feed_Forward()\n",
     "mdl_hm.add_layer(2)\n",
-    "mdl_hm.add_layer(16, 'sigmoid')\n",
-    "mdl_hm.add_layer(4, 'sigmoid')\n",
-    "mdl_hm.add_layer(1, 'sigmoid')"
+    "mdl_hm.add_layer(9, activation_function='sigmoid')\n",
+    "mdl_hm.add_layer(3, activation_function='sigmoid')\n",
+    "mdl_hm.add_layer(1, activation_function='sigmoid')"
    ]
   },
   {
@@ -107,12 +107,7 @@
     "history = mdl_hm.train(\n",
     "    df_train_x_norm,\n",
     "    df_train_y,\n",
-    "    epochs=50,\n",
-    "    debug=True,\n",
-    "    shuffle=True,\n",
-    "    learning_rate_p = 1,\n",
-    "    learning_rate_n = 1,\n",
-    "    momentum_factor=0.7\n",
+    "    epochs=50\n",
     ")\n",
     "    \n",
     "hlp.plot_learning_curve(history)"
@@ -141,9 +136,11 @@
    "source": [
     "arr = []\n",
     "\n",
-    "for i in range(-25,25):\n",
-    "    for j in range(-25,25):\n",
-    "        p = mdl_hm.predict([i, j])[0]\n",
+    "for i in range(-15,25):\n",
+    "    for j in range(-10,15):\n",
+    "        i_norm = i / 25\n",
+    "        j_norm = j / 25\n",
+    "        p = mdl_hm.predict([i_norm, j_norm])[0]\n",
     "        arr.append([i, j, p])"
    ]
   },
@@ -154,7 +151,7 @@
    "outputs": [],
    "source": [
     "np_array = np.array(list_pts)\n",
-    "# np_array = np.array(arr)\n",
+    "np_array = np.array(arr)\n",
     "transpose = np_array.T\n",
     "transpose_list = transpose.tolist()"
    ]
@@ -165,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hmhlp.plotHalfMoon(hm[0], hm[1])\n",
+    "hmhlp.plotHalfMoon(hm[0], hm[1])\n",
     "plt.scatter(transpose_list[0], transpose_list[1], c=transpose_list[2], marker='o')"
    ]
   }
