--- a/rgb.ipynb
+++ b/rgb.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from model.classes import Neuron, Layer, Network_Model\n",
+    "from model.classes import Neuron, Layer, Feed_Forward\n",
     "from model import helpers as hlp\n",
     "import rgb.rgb_helpers as chlp\n",
     "import pandas as pd"
@@ -123,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mdl_rgb = Network_Model()\n",
+    "mdl_rgb = Feed_Forward()\n",
     "mdl_rgb.add_layer(3)\n",
     "mdl_rgb.add_layer(16, activation_function='sigmoid')\n",
     "mdl_rgb.add_layer(11, activation_function='sigmoid')"
@@ -237,7 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rgb = [140, 50, 180] # https://www.w3schools.com/colors/colors_rgb.asp\n",
+    "rgb = [50, 100, 220] # https://www.w3schools.com/colors/colors_rgb.asp\n",
     "input = chlp.rgb_to_norm(rgb)\n",
     "pred = mdl_rgb.predict(input) # Possible Color Predictions: Beige, Yellow, Orange, Red, Purple, Blue, Green, Grey, Brown, White, Black\n",
     "print(y_columns[pred.index(max(pred))])\n",
