finished halfmoon learning, implemented goal error rate

--- a/8_3_8_encoding.ipynb
+++ b/8_3_8_encoding.ipynb
@@ -60,8 +60,7 @@
     "    epochs=10000,\n",
     "    debug=True,\n",
     "    shuffle=True,\n",
-    "    learning_rate_p=1, learning_rate_n=1,\n",
-    "    momentum_factor=0\n",
+    "    max_error=0\n",
     ")"
    ]
   },
