--- a/halfmoon.ipynb
+++ b/halfmoon.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hm = hmhlp.halfMoon(500, 10, -5, 6)\n",
+    "hm = hmhlp.halfMoon(200, 10, -5, 6)\n",
     "# hm = hmhlp.halfMoon(200, 10, 1, 6)"
    ]
   },
@@ -84,8 +84,7 @@
    "source": [
     "mdl_hm = Feed_Forward()\n",
     "mdl_hm.add_layer(2)\n",
-    "mdl_hm.add_layer(9, activation_function='sigmoid')\n",
-    "mdl_hm.add_layer(3, activation_function='sigmoid')\n",
+    "mdl_hm.add_layer(5, activation_function='sigmoid')\n",
     "mdl_hm.add_layer(1, activation_function='sigmoid')"
    ]
   },
@@ -107,7 +106,11 @@
     "history = mdl_hm.train(\n",
     "    df_train_x_norm,\n",
     "    df_train_y,\n",
-    "    epochs=50\n",
+    "    epochs=1000,\n",
+    "    shuffle=True,\n",
+    "    debug=True,\n",
+    "    max_error=0.0001,\n",
+    "    momentum_factor=0.6\n",
     ")\n",
     "    \n",
     "hlp.plot_learning_curve(history)"
@@ -136,10 +139,18 @@
    "source": [
     "arr = []\n",
     "\n",
-    "for i in range(-15,25):\n",
-    "    for j in range(-10,15):\n",
-    "        i_norm = i / 25\n",
-    "        j_norm = j / 25\n",
+    "min_val_1 = -15\n",
+    "max_val_1 = 25\n",
+    "min_val_2 = -10\n",
+    "max_val_2 = 15\n",
+    "\n",
+    "upper_bound = 1\n",
+    "lower_bound = -1\n",
+    "\n",
+    "for i in range(min_val_1, max_val_1):\n",
+    "    for j in range(min_val_2, max_val_2):\n",
+    "        i_norm = (i - min_val_1) / (max_val_1 - min_val_1) * (upper_bound - lower_bound) + lower_bound\n",
+    "        j_norm = (j - min_val_2) / (max_val_2 - min_val_2) * (upper_bound - lower_bound) + lower_bound\n",
     "        p = mdl_hm.predict([i_norm, j_norm])[0]\n",
     "        arr.append([i, j, p])"
    ]
@@ -150,10 +161,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np_array = np.array(list_pts)\n",
     "np_array = np.array(arr)\n",
     "transpose = np_array.T\n",
-    "transpose_list = transpose.tolist()"
+    "transpose_list = transpose.tolist()\n",
+    "\n",
+    "transpose_2 = hm[0].T\n",
+    "transpose_list_2 = transpose_2.tolist()"
    ]
   },
   {
@@ -162,8 +175,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hmhlp.plotHalfMoon(hm[0], hm[1])\n",
-    "plt.scatter(transpose_list[0], transpose_list[1], c=transpose_list[2], marker='o')"
+    "cm = plt.cm.get_cmap('bwr')\n",
+    "\n",
+    "plt.figure(1)\n",
+    "plt.scatter(transpose_list[0], transpose_list[1], c=transpose_list[2], marker='o', cmap=cm, alpha=0.5)\n",
+    "plt.scatter(transpose_list_2[0], transpose_list_2[1], c='black', marker='x')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mdl_hm.layers[1].get_weights()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mdl_hm.layers[2].get_weights()"
    ]
   }
  ],
