split classes into seperate files

--- a/halfmoon.ipynb
+++ b/halfmoon.ipynb
@@ -6,12 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
-    "from model.classes import Neuron, Layer, Feed_Forward\n",
+    "from model.classes import network\n",
     "from model import helpers as hlp\n",
     "from halfmoon import halfmoon_helpers as hmhlp"
    ]
@@ -82,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mdl_hm = Feed_Forward()\n",
+    "mdl_hm = network.Feed_Forward()\n",
     "mdl_hm.add_layer(2)\n",
     "mdl_hm.add_layer(5, activation_function='sigmoid')\n",
     "mdl_hm.add_layer(1, activation_function='sigmoid')"
