--- a/8_3_8_encoding.ipynb
+++ b/8_3_8_encoding.ipynb
@@ -6,9 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from model.classes import Neuron, Layer, Feed_Forward\n",
+    "from model.classes import network\n",
     "from model import helpers as hlp\n",
-    "import rgb.rgb_helpers as chlp\n",
     "import pandas as pd"
    ]
   },
@@ -42,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mdl_8_3_8 = Feed_Forward()\n",
+    "mdl_8_3_8 = network.Feed_Forward()\n",
     "mdl_8_3_8.add_layer(8)\n",
     "mdl_8_3_8.add_layer(3, activation_function='sigmoid')\n",
     "mdl_8_3_8.add_layer(8, activation_function='sigmoid')\n",
