Validation, learning rate based on error dynamic

--- a/8_3_8_encoding.ipynb
+++ b/8_3_8_encoding.ipynb
@@ -58,8 +58,7 @@
     "    train_df_x_norm, train_df_y,\n",
     "    epochs=10000,\n",
     "    debug=True,\n",
-    "    shuffle=True,\n",
-    "    max_error=0\n",
+    "    shuffle=True\n",
     ")"
    ]
   },
@@ -69,16 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hlp.plot_learning_curve(history, 'Epochs', 'Average Error', 'Learning Curve')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_num = 3\n",
+    "input_num = 4\n",
     "input_vec = []\n",
     "\n",
     "match input_num:\n",
