--- a/halfmoon.ipynb
+++ b/halfmoon.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -16,13 +23,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "hm = hmhlp.halfMoon(200, 10, -5, 6)\n",
-    "# hm = hmhlp.halfMoon(200, 10, 1, 6)"
+    "Create data"
    ]
   },
   {
@@ -31,7 +35,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "hm = hmhlp.halfMoon(2000, 10, -5, 6)\n",
     "hmhlp.plotHalfMoon(hm[0], hm[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert data to dataframes"
    ]
   },
   {
@@ -41,16 +53,15 @@
    "outputs": [],
    "source": [
     "df_pts = pd.DataFrame(hm[0], columns=['x', 'y'])\n",
-    "df_moons = pd.DataFrame(hm[1], columns=['in_red'])"
+    "df_moons = pd.DataFrame(hm[1], columns=['in_red'])\n",
+    "df = pd.concat([df_pts, df_moons], axis=1, join='inner')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df = pd.concat([df_pts, df_moons], axis=1, join='inner')"
+    "Split data"
    ]
   },
   {
@@ -62,7 +73,17 @@
     "x_cols = ['x', 'y']\n",
     "y_cols = ['in_red']\n",
     "\n",
-    "df_train_x, df_train_y = hlp.split_input_output_data(df, x_cols=x_cols, y_cols=y_cols)"
+    "df_train, df_val = hlp.split_training_val_data(df)\n",
+    "\n",
+    "df_train_x, df_train_y = hlp.split_input_output_data(df_train, x_cols=x_cols, y_cols=y_cols)\n",
+    "df_val_x, df_val_y = hlp.split_input_output_data(df_val, x_cols=x_cols, y_cols=y_cols)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Normalize training and validation input"
    ]
   },
   {
@@ -72,7 +93,14 @@
    "outputs": [],
    "source": [
     "df_train_x_norm = hlp.normalize(df_train_x, -15, 25, -1, 1)\n",
-    "df_val_x_norm = hlp.normalize(df_train_x, -15, 25, -1, 1)"
+    "df_val_x_norm = hlp.normalize(df_val_x, -15, 25, -1, 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create model instance"
    ]
   },
   {
@@ -88,12 +116,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "mdl_hm.plot_network()"
+    "Train the model"
    ]
   },
   {
@@ -105,14 +131,22 @@
     "history = mdl_hm.train(\n",
     "    df_train_x_norm,\n",
     "    df_train_y,\n",
-    "    epochs=1000,\n",
+    "    epochs=200,\n",
     "    shuffle=True,\n",
     "    debug=True,\n",
-    "    max_error=0.0001,\n",
-    "    momentum_factor=0.6\n",
+    "    min_learning_rate=0.01,\n",
+    "    max_error=0.00001,\n",
+    "    adaptive_learning_rate=True\n",
     ")\n",
-    "    \n",
-    "hlp.plot_learning_curve(history)"
+    "  \n",
+    "hlp.plot_learning_curve(history, 'Epoch', 'Average Error')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Validate trained model"
    ]
   },
   {
@@ -121,13 +155,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "list_pts = df_pts.values.tolist()\n",
-    "list_moons = df_moons.values.tolist()\n",
+    "vals = mdl_hm.create_validation_list(df_val_x_norm, df_val_y)\n",
     "\n",
-    "for l in range(len(list_pts)):\n",
-    "    p = 0 if mdl_hm.predict(list_pts[l])[0] < 0.5 else 1\n",
-    "    list_pts[l].append(p)\n",
-    "    list_pts[l].append(int(list_moons[l][0]))"
+    "debug = False\n",
+    "misclassifications = 0\n",
+    "\n",
+    "for v in vals:\n",
+    "    p = 1.0 if v[0][0] > 0.5 else 0.0\n",
+    "    if p != v[1][0]:\n",
+    "        misclassifications += 1\n",
+    "        if debug: print(f'pred {v[0][0]}={p}, correct {v[1]} => X')\n",
+    "    else:\n",
+    "        if debug: print(f'pred {v[0][0]}={p}, correct {v[1][0]} => OK')\n",
+    "print(f'{misclassifications} of {len(vals)} misclassifications.')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot validated dataset"
    ]
   },
   {
@@ -136,67 +183,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr = []\n",
+    "arr_val_x = np.array(df_val_x.values.tolist())\n",
+    "arr_val_x_t = arr_val_x.T\n",
     "\n",
-    "min_val_1 = -15\n",
-    "max_val_1 = 25\n",
-    "min_val_2 = -10\n",
-    "max_val_2 = 15\n",
+    "preds = []\n",
     "\n",
-    "upper_bound = 1\n",
-    "lower_bound = -1\n",
+    "for v in vals:\n",
+    "    preds.append(v[0][0])\n",
     "\n",
-    "for i in range(min_val_1, max_val_1):\n",
-    "    for j in range(min_val_2, max_val_2):\n",
-    "        i_norm = (i - min_val_1) / (max_val_1 - min_val_1) * (upper_bound - lower_bound) + lower_bound\n",
-    "        j_norm = (j - min_val_2) / (max_val_2 - min_val_2) * (upper_bound - lower_bound) + lower_bound\n",
-    "        p = mdl_hm.predict([i_norm, j_norm])[0]\n",
-    "        arr.append([i, j, p])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np_array = np.array(arr)\n",
-    "transpose = np_array.T\n",
-    "transpose_list = transpose.tolist()\n",
-    "\n",
-    "transpose_2 = hm[0].T\n",
-    "transpose_list_2 = transpose_2.tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cm = plt.cm.get_cmap('bwr')\n",
-    "\n",
-    "plt.figure(1)\n",
-    "plt.scatter(transpose_list[0], transpose_list[1], c=transpose_list[2], marker='o', cmap=cm, alpha=0.5)\n",
-    "plt.scatter(transpose_list_2[0], transpose_list_2[1], c='black', marker='x')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mdl_hm.layers[1].get_weights()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mdl_hm.layers[2].get_weights()"
+    "plt.scatter(arr_val_x_t[0], arr_val_x_t[1], c=preds)"
    ]
   }
  ],
