--- a/rgb.ipynb
+++ b/rgb.ipynb
@@ -201,7 +201,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "history = mdl_rgb.train(train_df_x_norm, train_df_y, epochs=200, debug=True, shuffle=True, learning_rate_p=1.3, learning_rate_n=0.7, momentum_factor=0.6)"
+    "history = mdl_rgb.train(\n",
+    "    train_df_x_norm,\n",
+    "    train_df_y,\n",
+    "    epochs=200,\n",
+    "    debug=True,\n",
+    "    shuffle=True,\n",
+    "    adaptive_learning_rate=True,\n",
+    "    momentum_factor=0.6\n",
+    ")"
    ]
   },
   {
