function descriptions, minor optimizations

--- a/8_3_8_encoding.ipynb
+++ b/8_3_8_encoding.ipynb
@@ -44,8 +44,7 @@
     "mdl_8_3_8 = network.Feed_Forward()\n",
     "mdl_8_3_8.add_layer(8)\n",
     "mdl_8_3_8.add_layer(3, activation_function='sigmoid')\n",
-    "mdl_8_3_8.add_layer(8, activation_function='sigmoid')\n",
-    "mdl_8_3_8.plot_network()"
+    "mdl_8_3_8.add_layer(8, activation_function='sigmoid')"
    ]
   },
   {
@@ -59,7 +58,8 @@
     "    epochs=10000,\n",
     "    debug=True,\n",
     "    shuffle=True\n",
-    ")"
+    ")\n",
+    "hlp.plot_learning_curve(history)"
    ]
   },
   {
