--- a/halfmoon.ipynb
+++ b/halfmoon.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hm = hmhlp.halfMoon(2000, 10, -5, 6)\n",
+    "hm = hmhlp.halfMoon(2500, 10, -5, 6)\n",
     "hmhlp.plotHalfMoon(hm[0], hm[1])"
    ]
   },
@@ -111,7 +111,7 @@
    "source": [
     "mdl_hm = network.Feed_Forward()\n",
     "mdl_hm.add_layer(2)\n",
-    "mdl_hm.add_layer(5, activation_function='sigmoid')\n",
+    "mdl_hm.add_layer(5, activation_function='tanh')\n",
     "mdl_hm.add_layer(1, activation_function='sigmoid')"
    ]
   },
@@ -131,15 +131,14 @@
     "history = mdl_hm.train(\n",
     "    df_train_x_norm,\n",
     "    df_train_y,\n",
-    "    epochs=200,\n",
-    "    shuffle=True,\n",
+    "    epochs=100,\n",
+    "    shuffle=False,\n",
     "    debug=True,\n",
     "    min_learning_rate=0.01,\n",
-    "    max_error=0.00001,\n",
     "    adaptive_learning_rate=True\n",
     ")\n",
-    "  \n",
-    "hlp.plot_learning_curve(history, 'Epoch', 'Average Error')"
+    "\n",
+    "# hlp.plot_learning_curve(history)"
    ]
   },
   {
@@ -155,19 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vals = mdl_hm.create_validation_list(df_val_x_norm, df_val_y)\n",
-    "\n",
-    "debug = False\n",
-    "misclassifications = 0\n",
-    "\n",
-    "for v in vals:\n",
-    "    p = 1.0 if v[0][0] > 0.5 else 0.0\n",
-    "    if p != v[1][0]:\n",
-    "        misclassifications += 1\n",
-    "        if debug: print(f'pred {v[0][0]}={p}, correct {v[1]} => X')\n",
-    "    else:\n",
-    "        if debug: print(f'pred {v[0][0]}={p}, correct {v[1][0]} => OK')\n",
-    "print(f'{misclassifications} of {len(vals)} misclassifications.')\n"
+    "validations = mdl_hm.validate_binary(df_val_x_norm, df_val_y)"
    ]
   },
   {
@@ -188,10 +175,10 @@
     "\n",
     "preds = []\n",
     "\n",
-    "for v in vals:\n",
+    "for v in validations:\n",
     "    preds.append(v[0][0])\n",
     "\n",
-    "plt.scatter(arr_val_x_t[0], arr_val_x_t[1], c=preds)"
+    "plt.scatter(arr_val_x_t[0], arr_val_x_t[1], c=preds, cmap='bwr', marker='x')"
    ]
   }
  ],
